Updates the api
Switches the api to use the new resource models.
Updates swagger docs and specs.
