# app/controllers/api/v1/teacher_resources_controller.rb
@@ -1,33 +1,34 @@
 class Api::V1::TeacherResourcesController < Api::BaseController
   def index
-    render json: TeacherResourceSerializer.render(teacher_resources.blobs)
+    render json: TeacherResourceSerializer.render(teacher_resources)
   end
 
   def create
-    if teacher_resources.attach teacher_resource_params
+    teacher_resource = teacher_resources.new teacher_resource_params
+    if teacher_resource.save
       head :created
     else
-      render json: { errors: activity.errors.full_messages }, status: :bad_request
+      render json: { errors: teacher_resource.errors.full_messages }, status: :bad_request
     end
   end
 
   def destroy
     teacher_resource = teacher_resources.find params[:id]
-    teacher_resource.purge
+    teacher_resource.destroy!
     head :no_content
   end
 
 private
 
   def teacher_resources
-    @teacher_resources ||= activity.teacher_resources
+    @teacher_resources ||= activity.temp_teacher_resources
   end
 
   def activity
-    @activity ||= Activity.with_attached_teacher_resources.find params[:activity_id]
+    @activity ||= Activity.find params[:activity_id]
   end
 
   def teacher_resource_params
-    params.require :teacher_resource
+    params.require(:teacher_resource).permit :file, :preview
   end
 end
